client/src/components/LandingPage/firstandsecondPage/section2.css
.section2-con{
  text-align: center; /* Align section content to the center */
    padding: 50px 20px; /* Add padding for spacing */
    max-width: 1200px; /* Set max width for the section */
    margin: 0 auto; /* Center the section horizontally */
}
.card {
  margin-bottom: 20px;
  border: 1px solid #ccc;
  border-radius: 30px;
  padding: 20px;
  /* Adjusted margin to center the cards */
  margin: 20px auto;
}
.section-paragraph2{
  text-align: center;
  font-weight: bold;
  font-size: large;
  font-family: 'Times New Roman', Times, serif;
}
.head2 {
    text-align: center;
    margin-top: 27px;
    font-weight: bold;
    font-size: xx-large;
    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
}

/* Style for the SVG icons */
.card svg {
  width: 60px;
  height: 60px;
  margin-bottom: 10px;
}

/* Style for the custom buttons */
.custom-but {
  display: inline-block;
  padding: 10px 20px;
  border: 2px solid #5a5f5d;
  background-color: #444744;
  color: white;
  text-align: center;
  text-decoration: none;
  font-size: 16px;
  border-radius: 30px;
  cursor: pointer;
  transition: background-color 0.3s, color 0.3s, border-color 0.3s;
}

/* Center the text inside the card body */
.card-body {
  text-align: center;
}

/* Center the SVG horizontally */
.svg-center {
  display: flex;
  justify-content: center;
}

/* Background color for section 2 */
.sec2 {
  background: rgb(255, 254, 208);
}

/* Media query for laptop view */
@media (min-width: 992px) {
  .card {
    margin: 20px;
  }
  
  /* Style for the SVG icons */
  .card svg {
    width: 60px;
    height: 60px;
    margin-bottom: 10px;
  }
  
  /* Style for the custom buttons */
  .custom-but {
    display: inline-block;
    padding: 10px 25px;
    border: 2px solid #5a5f5d;
    background-color: #444744;
    color: white;
    text-align: center;
    text-decoration: none;
    font-size: 16px;
    border-radius: 30px;
  
  }
  .card{
    text-align: center;
    width: 10rem;
    height: 145px;
    border-radius: 35px;
    background: rgba(245, 196, 60, 0.781);
    
  }
  
  .card-body {
    text-align: center;
  }
  
  .svg-center {
    display: flex;
    justify-content: center;
  }
  .sec2{
    background: rgb(255, 254, 208);
  }}
  .row {
    display: flex;
    justify-content: space-between;
    margin-bottom: 20px;
    margin-right: -128px;
    margin-left: 55px;
}

